--- a/helm-values-from/values-from-configmap.yaml
+++ b/helm-values-from/values-from-configmap.yaml
@@ -1,5 +1,5 @@
 name: configmap overrides values from fleet.yaml
-config: config option
+config: configmap-values
 options:
   onlyconfigmap: configmap option
   english:
