--- a/helm-values-from/values-from-secret.yaml
+++ b/helm-values-from/values-from-secret.yaml
@@ -1,5 +1,5 @@
 name: secret overrides values from fleet.yaml
-secret: secret-values
+secret: xyz secret
 options:
   onlysecret: secret option
   english:
