--- a/helm-values-from/values-from-configmap.yaml
+++ b/helm-values-from/values-from-configmap.yaml
@@ -1,5 +1,5 @@
 name: configmap overrides values from fleet.yaml
-config: configmap-values
+config: config option
 options:
   onlyconfigmap: configmap option
   english:
