--- a/helm-secret-first-update-cm-later/templates/configmap.yaml
+++ b/helm-secret-first-update-cm-later/templates/configmap.yaml
@@ -8,3 +8,5 @@ data:
   fleetyaml: {{ .Values.fleetyaml }}
   englishname: {{ .Values.options.english.name }}
   optionsecret: {{ .Values.options.onlysecret }}
+  config: {{ .Values.config }}
+  optionconfigmap: {{ .Values.options.onlyconfigmap }}
