--- a/helm-secret-first-update-cm-later/fleet.yaml
+++ b/helm-secret-first-update-cm-later/fleet.yaml
@@ -3,6 +3,10 @@ helm:
     - secretKeyRef:
         name: secret-values
         key: values.yaml
+      configMapKeyRef:
+        name: configmap-values
+        namespace: default
+        key: values.yaml
   values:
     name: name from fleet.yaml
     fleetyaml: from fleet.yaml
